#!/usr/bin/env ts-node

/**
 * Test script to verify the generated @galpha/proto package works correctly
 */

import {
  proto,
  ledger,
  position_manager,
  user_service,
} from '../../dist/index';

console.log('üß™ Testing @galpha/proto package...\n');

// Test 1: Package import
console.log('1Ô∏è‚É£ Testing package import...');
console.log('‚úÖ Package imported successfully');
console.log('   - proto namespace:', typeof proto);
console.log('   - ledger namespace:', typeof ledger);
console.log('   - position_manager namespace:', typeof position_manager);
console.log('   - user_service namespace:', typeof user_service);
console.log('');

// Test 2: Check available types
console.log('2Ô∏è‚É£ Testing available types...');
const ledgerTypes = Object.keys(ledger.v1);
console.log(`‚úÖ Found ${ledgerTypes.length} types in ledger.v1`);
console.log('   Sample types:', ledgerTypes.slice(0, 5).join(', '));
console.log('');

// Test 3: Create a CreatePendingDepositRequest
console.log('3Ô∏è‚É£ Testing CreatePendingDepositRequest.create()...');
const request = proto.ledger.v1.CreatePendingDepositRequest.create({
  txHash: '0xabc123def456',
  chainId: 'eip155:1',
  asset: 'usdc',
  amount: '1000.00',
  autoStake: false,
});

console.log('‚úÖ Request created successfully');
console.log('   Request:', JSON.stringify(request, null, 2));
console.log('');

// Test 4: Convert to JSON object
console.log('4Ô∏è‚É£ Testing toObject()...');
const jsonObj = proto.ledger.v1.CreatePendingDepositRequest.toObject(request);
console.log('‚úÖ Converted to JSON object');
console.log('   JSON:', JSON.stringify(jsonObj, null, 2));
console.log('');

// Test 5: Create from JSON object
console.log('5Ô∏è‚É£ Testing fromObject()...');
const responseData = {
  id: 'deposit-789',
  txHash: '0xabc123def456',
  chainId: 'eip155:1',
  asset: 'usdc',
  originalAmount: '1000.00',
  aiusdAmount: '1000.00',
  autoStake: false,
  status: 'pending',
  createdAt: '2025-10-03T10:00:00Z',
  updatedAt: '2025-10-03T10:00:00Z',
};

const response = proto.ledger.v1.CreatePendingDepositResponse.fromObject(responseData);
console.log('‚úÖ Created response from object');
console.log('   Response ID:', response.id);
console.log('   Response status:', response.status);
console.log('');

// Test 6: Binary encoding/decoding
console.log('6Ô∏è‚É£ Testing binary encode/decode...');
const encoded = proto.ledger.v1.CreatePendingDepositRequest.encode(request).finish();
console.log(`‚úÖ Encoded to binary (${encoded.length} bytes)`);

const decoded = proto.ledger.v1.CreatePendingDepositRequest.decode(encoded);
console.log('‚úÖ Decoded from binary');
console.log('   Decoded txHash:', decoded.txHash);
console.log('   Decoded amount:', decoded.amount);
console.log('   Match original:', decoded.txHash === request.txHash && decoded.amount === request.amount);
console.log('');

// Test 7: Test PendingDeposit type
console.log('7Ô∏è‚É£ Testing PendingDeposit.create()...');
const pendingDeposit = proto.ledger.v1.PendingDeposit.create({
  id: 'deposit-456',
  txHash: '0x789abc',
  chainId: 'eip155:1',
  asset: 'usdt',
  originalAmount: '500.00',
  aiusdAmount: '500.00',
  autoStake: true,
  status: 'confirmed',
  createdAt: '2025-10-03T09:00:00Z',
  updatedAt: '2025-10-03T09:30:00Z',
});

console.log('‚úÖ PendingDeposit created successfully');
console.log('   Deposit ID:', pendingDeposit.id);
console.log('   Auto-stake:', pendingDeposit.autoStake);
console.log('   Status:', pendingDeposit.status);
console.log('');

// Test 8: Test GetBalanceResponse
console.log('8Ô∏è‚É£ Testing GetBalanceResponse.create()...');
const balance = proto.ledger.v1.GetBalanceResponse.create({
  userId: 'user-123',
  tradingBalance: '1500.50',
  stakedBalance: '3000.00',
  totalBalance: '4500.50',
  yieldAccumulated: '25.75',
  version: 1,
});

console.log('‚úÖ Balance created successfully');
console.log('   User ID:', balance.userId);
console.log('   Trading balance:', balance.tradingBalance);
console.log('   Staked balance:', balance.stakedBalance);
console.log('   Total balance:', balance.totalBalance);
console.log('   Yield:', balance.yieldAccumulated);
console.log('');

// Test 9: Test Position Manager types
console.log('9Ô∏è‚É£ Testing Position Manager types...');
const position = proto.position_manager.v1.Position.create({
  token: 'SOL',
  balance: '1000000000',
  mint: 'So11111111111111111111111111111111111111112',
  decimals: 9,
});

console.log('‚úÖ Position created successfully');
console.log('   Token:', position.token);
console.log('   Balance:', position.balance);
console.log('   Mint:', position.mint);
console.log('   Decimals:', position.decimals);
console.log('');

// Test 10: Test type aliases
console.log('üîü Testing type aliases...');
console.log('   CreatePendingDepositRequest is a type alias');
console.log('   PendingDeposit is a type alias');
console.log('   GetBalanceResponse is a type alias');
console.log('');

console.log('‚úÖ All tests passed! The package is working correctly! üéâ\n');
